Bug 292869 - going to new message does not restore window
Summary: going to new message does not restore window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-30 13:47 UTC by Silver Salonen
Modified: 2012-01-30 16:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-01-30 13:47:43 UTC
Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

When I click on KMail's system tray icon and choose "New Message In" -> (whatever folder), KMail is not restored from system tray, but the message is chosen, because a) the new message count is decreased by 1; b) when I restore KMail from system tray, I see the newly received message.

Reproducible: Always

Steps to Reproduce:
1) Enable system tray icon
2) Wait for a new message to receive
3) From system tray icon choose: New Message In -> (whatever folder)

Actual Results:  
KMail's window is not restored

Expected Results:  
KMail's window should be restored
Comment 1 Laurent Montel 2012-01-30 15:25:38 UTC
I confirm it.
Will look at.
Comment 2 Laurent Montel 2012-01-30 16:54:32 UTC
Git commit 5b11afa08d7de26902693ff32bb2d6eed1a24170 by Montel Laurent.
Committed on 30/01/2012 at 17:54.
Pushed by mlaurent into branch 'master'.

Fix Bug 292869 - going to new message does not restore window

FIXED-IN: 4.8.1

M  +6    -0    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/5b11afa08d7de26902693ff32bb2d6eed1a24170
Comment 3 Laurent Montel 2012-01-30 16:55:07 UTC
Git commit 115c9713f6eae98bd1218ad2e8247203bd640f23 by Montel Laurent.
Committed on 30/01/2012 at 17:54.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 292869 - going to new message does not restore window

FIXED-IN: 4.8.1
(cherry picked from commit 5b11afa08d7de26902693ff32bb2d6eed1a24170)

M  +6    -0    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/115c9713f6eae98bd1218ad2e8247203bd640f23
Comment 4 Laurent Montel 2012-01-30 16:55:48 UTC
Git commit c621eac701ff4dfbe23e0173ec7756436e5deffd by Montel Laurent.
Committed on 30/01/2012 at 17:54.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 292869 - going to new message does not restore window

FIXED-IN: 4.8.1
(cherry picked from commit 5b11afa08d7de26902693ff32bb2d6eed1a24170)

M  +6    -0    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/c621eac701ff4dfbe23e0173ec7756436e5deffd