Fix Bug 292869 - going to new message does not restore window

FIXED-IN: 4.8.1
BUG: 292869